--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mern-boilerplate",
+  "name": "Proof-of-Attendance-backend",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
