--- a/package.json
+++ b/package.json
@@ -1,13 +1,9 @@
 {
   "dependencies": {
-    "axios": "^1.2.2",
     "chai": "^4.3.7",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "https": "^1.0.0",
     "ipfs-http-client": "^59.0.0",
-    "swagger-jsdoc": "5.0.1",
-    "swagger-ui-express": "^4.6.0",
     "verify-xrpl-signature": "^0.4.1",
     "xrpl": "^2.6.0"
   },
@@ -23,11 +19,7 @@
   "author": "Daniel",
   "license": "ISC",
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
-    "cross-env": "^7.0.3",
-    "jest": "^29.3.1",
-    "superagent": "^8.0.6",
-    "supertest": "^6.3.3"
+    "supertest": "^6.3.3",
+    "mocha": "*"
   }
 }
