--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "license": "ISC",
   "devDependencies": {
     "supertest": "^6.3.3",
-    "mocha": "*"
+    "mocha": "*",
+    "nodemon": "*"
   }
 }
